# QT

./: CMakeLists.txt  README.md  example_usage.txt  fileprocessor.cpp  fileprocessor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test_data.txt
